--- a/Views/DashBoard/Index.cshtml
+++ b/Views/DashBoard/Index.cshtml
@@ -6,8 +6,8 @@
 }
            <div>          
                 <div class="x_title">
-                    <h2>Bảng Giá</h2>
-                    <button onclick="myFunction()">Toggle dark mode</button>
+                    <h2>&emsp; Bảng Giá Trực Tuyến</h2>
+                 
                     <div class="clearfix"></div>
                 </div>
                 <div class="x_content">             
@@ -33,7 +33,7 @@
                                 <th>Giá </th>
                                 <th>KL</th>
                                 <th>Giá 1</th>
-                                <th>KL</th>
+                                <th>KL1</th>
                                 <th>Giá 2</th>
                                 <th>KL 2</th>
                                 <th>Giá 3</th>
@@ -50,6 +50,6 @@
 @section Scripts{
     <script src="~/lib/microsoft-signalr/signalr.js"></script>
     <script src="~/lib/microsoft-signalr/signalr.min.js"></script>
-   <script src="~/js/Dashhub.js"></script>
+   <script src="~/js/hub.js"></script>
   
 }
